--- a/CityInfo.API/appsettings.Development.json
+++ b/CityInfo.API/appsettings.Development.json
@@ -9,5 +9,10 @@
   },
   "ConnectionStrings": {
     "CityInfoDBConnectionString": "Data Source=CityInfo.db"
+  },
+  "Authentication": {
+    "SecretForKey": "thisismymotherlovelbnsecrethantykanty",
+    "Issuer": "https://localhost:7153",
+    "Audience": "cityinfoapi"
   }
 }
